# gegar

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: release.yml
src/gegar/: __init__.py  __main__.py  cli.py  config.py  daemon.py  jiggler.py
src/gegar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
