[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gegar"
version = "0.1.0"
description = "A cross-platform CLI mouse jiggler that runs in the background"
requires-python = ">=3.8"
dependencies = [
    "pynput>=1.7.6",
    "tomli>=2.0.1;python_version<'3.11'",
]

[project.scripts]
gegar = "gegar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
